<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/phone_connected" />

            <ImageView
                android:id="@+id/ic_connect_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:src="@drawable/disconnect" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="16dp"
                android:src="@drawable/printer_connected" />
        </LinearLayout>

        <TextView
            android:id="@+id/connect_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/disconnect"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="@drawable/background"
            android:onClick="connectPrinter"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/connect_printer"
                android:textColor="#fafafa"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="@drawable/background"
            android:onClick="printOrder"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/print_order"
                android:textColor="#fafafa"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="@drawable/background"
            android:onClick="printQRCode"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/print_qrcode"
                android:textColor="#fafafa"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="@drawable/background"
            android:onClick="printImage"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/print_image"
                android:textColor="#fafafa"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="@drawable/background"
            android:onClick="feed"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/feed"
                android:textColor="#fafafa"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="@drawable/background"
            android:onClick="disconnect"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="4dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/disconnect_btn"
                android:textColor="#fafafa"
                android:textSize="15sp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>